report/調閱一個錄影事件回放 (Mobile Android)/2026-01-23_12-27-40/terminal_output.log
================================================================================
測試案例: 調閱一個錄影事件回放 (Mobile Android)
執行時間: 2026-01-23 12:27:40
執行命令: C:\Python314\python.exe -m pytest D:\nxwitness-demo\tests\test_runner.py --test_name 調閱一個錄影事件回放 (Mobile Android) -v -s --tb=short
工作目錄: D:\nxwitness-demo
================================================================================

============================= test session starts =============================
platform win32 -- Python 3.14.2, pytest-9.0.2, pluggy-1.6.0 -- C:\Python314\python.exe
cachedir: .pytest_cache
rootdir: D:\nxwitness-demo
plugins: anyio-4.12.1
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
____________________ ERROR collecting tests/test_runner.py ____________________
C:\Users\usert\AppData\Roaming\Python\Python314\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\usert\AppData\Roaming\Python\Python314\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
C:\Users\usert\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_runner.py:5: in <module>
    from engine.step_translator import StepTranslator
engine\step_translator.py:26: in <module>
    from actions.nx_mobile_actions import NxMobileActions
actions\nx_mobile_actions.py:11: in <module>
    from pages.mobile.main_page import MainPage
E     File "D:\nxwitness-demo\pages\mobile\main_page.py", line 229
E       if self.click_element(element):
E       ^^
E   IndentationError: expected an indented block after 'if' statement on line 228
=========================== short test summary info ===========================
ERROR tests/test_runner.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.60s ===============================

================================================================================
退出碼: 2
執行結果: 失敗或被中斷
================================================================================
